[package]
name = "udstunnel"
version = "0.1.0"
edition = "2021"
authors = ["Adolfo Gómez <Dkmaster@dkmon.com>"]

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = "0.26.0"
bytes = "1.8.0"
rustls = { version = "0.23.16", features = ["tls12"] }
env_logger = "0.11.5"
log = "0.4.22"
async-trait = "0.1.83"
config = "0.14.1"
clap = { version = "4.5.20", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"] }
serde = { version = "1.0.214", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.0"
