[package]
name = "udstunnel"
version = "0.1.0"
edition = "2021"
authors = ["Adolfo Gómez <Dkmaster@dkmon.com>"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
bytes = "1.10.1"
rustls = { version = "0.23.35", features = ["tls12"] }
rustls-native-certs = "0.8.2"
env_logger = "0.11.8"
log = "0.4.28"
async-trait = "0.1.89"
config = "0.15.18"
clap = { version = "4.5.51", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12.24", features = ["rustls-tls", "json"] }
serde = { version = "1.0.225", features = ["derive"] }
sha2 = "0.10.9"
anyhow = "1.0.100"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
mockito = "1.7.0"